# django-app

./: Dockerfile  devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
HTML_CSS/: index.html
mysite/: db.sqlite3  download.txt  log.txt  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_profile_email_profile_fist_name_profile_last_name.py  0004_rename_fist_name_profile_first_name.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  utils.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_product_created_by_and_more.py  0008_order_receipt.py  0009_product_preview.py  0010_productimage.py  0011_alter_order_options_alter_product_options_and_more.py
(+30 files in other folders)
