[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["EgorZybin <zibinegor@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-debug-toolbar = "^4.4.6"
pillow = "^11.0.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
